plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.3'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'checkstyle'
}

checkstyle {
    configFile = file("config/checkstyle/naver-checkstyle-rules.xml")
    configProperties = [suppressionFile: "config/checkstyle/naver-checkstyle-suppressions.xml"]
    sourceSets = [sourceSets.main] //QueryDSL Error 방지
}

checkstyleMain.source = fileTree('src/main/java')

group = 'com.mgk'
version = '0.0.1-SNAPSHOT'
description = 'BE_MGK'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
    maven { url 'https://repo.spring.io/milestone' }
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.ai:spring-ai-bom:2.0.0-M2"
    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    implementation 'org.springframework.ai:spring-ai-starter-model-google-genai'
    implementation 'com.google.cloud:google-cloud-vision:3.61.0'
    implementation 'software.amazon.awssdk:s3:2.25.39'

    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.2'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
    runtimeOnly 'com.mysql:mysql-connector-j'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
    testRuntimeOnly 'com.h2database:h2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    implementation platform('com.google.cloud:libraries-bom:26.34.0')
    implementation 'com.google.cloud:google-cloud-vision'
}

tasks.named('test') {
    useJUnitPlatform()
}

//체크스타일에서 테스트코드는 검사하지 않도록 설정
tasks.named('checkstyleTest').configure {
    enabled = false
}
